update homepage to fix for mobile spacing.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -820,9 +820,9 @@ body.bloglist section.child{
 
 body.bloglist section.child article{
 
-  width: 32%;
-  padding-bottom: 18%; /* 32:18, i.e. 16:9 */
-  margin-bottom: 2%; /* (100-32*3)/2 */
+  /* width: 32%;
+  padding-bottom: 18%; 
+  margin-bottom: 2%;  */
 
 }
 
@@ -971,7 +971,10 @@ display: none !important;
   display: none !important;
 } */
 
-section{height:100% !important; padding-bottom:3rem;}
+section{
+  /* height:100% !important; */
+   padding-bottom:3rem;
+  }
 
 .audio{
   position:fixed;
